syntax = "proto2";
package basic_study;

option go_package = "github.com/yincongcyincong/BasicStudy/proto/api";


message updateStudyQuestionReq {
  optional uint64 id = 1; // id
  optional uint64 create_time = 2; // create time
  optional string question = 3; // question
  optional string answer = 4; // answer
  optional uint64 test_id = 5; // test
  optional uint32 type = 6; // 1-math 2-english 
}